feat(session): phase 4 — returning sign-in
lock, pinlock, loading, newdevice and signout. This is the thesis: a borrower
who enrolled once signs in with a touch, and SMS appears nowhere on the path.

- lock: 112px biometric target with platform-resolved prompt copy, and the
  700ms recognition beat so the screen does not change under the finger
- pinlock: not a lesser path. Verification runs the moment the sixth digit
  lands, a re-entrancy guard stops one entry burning two attempts against the
  lockout, and five failures route to newdevice — re-authorising over USSD is
  the only way back, which is what makes the lockout mean anything
- loading: routes on what came back, not on where the borrower came from. A
  live loan lands on active, everyone else on offers
- newdevice: the *561*9# card, with the warning that staff will never ask for
  the code
- signout: clears PIN material and the durable slice separately — leaving a PIN
  hash on an unbound device would let it unlock into a session that no longer
  exists — and states plainly what does not change, because the fear this
  screen answers is 'will I lose my loan?'

159 tests pass, up from 148. Lockout is asserted end to end through the screen,
not only at the secure-pin layer, and lock has a negative test that fails if the
screen ever starts asking for a code.